[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandamap"
version = "1.0.0"
description = "A Python package for visualizing protein-ligand interactions with 2D ligand structure representation"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["bioinformatics", "protein-ligand", "interactions", "visualization", "drug-design"]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "biopython>=1.79",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/pandamap"
"Bug Tracker" = "https://github.com/yourusername/pandamap/issues"

[project.scripts]
pandamap = "pandamap.cli:main"
